added merge phase

--- a/m.ipynb
+++ b/m.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 79,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -23,7 +23,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 94,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -33,7 +33,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 95,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [
     {
@@ -70,7 +70,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 96,
+   "execution_count": 10,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -96,24 +96,53 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": []
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 97,
+   "execution_count": 11,
    "metadata": {},
    "outputs": [],
    "source": [
-    "def merge_phase():\n",
+    "def merge_comps(core1 , core2, core_points_map , G):\n",
+    "    pivot2 = min(core_points_map[core2], key=lambda node: euclidean_distance(node, core1))\n",
+    "    pivot1 = min(core_points_map[core1], key=lambda node: euclidean_distance(node, pivot2))\n",
+    "    G.add_edge(pivot1, pivot2)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 12,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def merge_phase(G):\n",
+    "    core_points_map = {}\n",
+    "    for component in nx.connected_components(G):\n",
+    "        centroid = np.mean([node for node in component], axis=0)\n",
+    "        closest_point = min(component, key=lambda node: euclidean_distance(node, centroid))\n",
+    "        core_points_map[closest_point] = component\n",
+    "\n",
+    "    core_points = list(core_points_map.keys())\n",
+    "\n",
+    "    minc = [float(\"inf\")] * len(core_points[0])\n",
+    "    maxc = [float(\"-inf\")] * len(core_points[0])\n",
+    "\n",
+    "    for point in core_points:\n",
+    "        for i in range(len(point)):\n",
+    "            minc[i] = min(minc[i], point[i])\n",
+    "            maxc[i] = max(maxc[i], point[i])\n",
+    "\n",
+    "    diff = [maxc[i] - minc[i] for i in range(len(minc))]\n",
+    "    min_diff_axis = diff.index(min(diff))\n",
+    "\n",
+    "    sorted_core_points = sorted(core_points, key=lambda point: point[min_diff_axis])\n",
+    "    for core1 , core2 in zip(sorted_core_points, sorted_core_points[1:]):\n",
+    "        merge_comps(core1, core2, core_points_map, G)\n",
+    "        \n",
+    "    \n",
     "    "
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 100,
+   "execution_count": 13,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -121,59 +150,26 @@
     "    tree, G, pos, postoid , neighbours = build()\n",
     "    k = 0\n",
     "    while ( k   < maxdis) :\n",
+    "        print(\"Connected Components : \" , len(connected_components))\n",
     "        if(len(connected_components := list(nx.connected_components(G)))) == 1 : break\n",
-    "        # print(\"Connected Components : \" , len(connected_components))\n",
     "        for component in connected_components:\n",
     "            for node in component:\n",
     "                wt , pos = neighbours[node][k]\n",
+    "                if pos in component : continue\n",
     "                G.add_edge(node , pos , weight = wt)\n",
     "        k += 1\n",
     "    else :\n",
-    "        merge_phase()\n",
+    "        merge_phase(G)\n",
     "    nx.minimum_spanning_tree(G)    "
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 101,
+   "execution_count": 14,
    "metadata": {},
    "outputs": [],
    "source": [
     "dcrun()"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 46,
-   "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "(-9.4, 9.2) (-8.9, 6.3)\n",
-      "(-8.9, 6.3) (-8.0, 6.1)\n",
-      "(-8.0, -6.5) (-7.4, -6.8)\n",
-      "(-8.0, 6.1) (-8.9, 6.3)\n",
-      "(-7.5, -7.2) (-7.4, -6.8)\n",
-      "(-7.4, -6.8) (-7.5, -7.2)\n",
-      "(-6.8, -8.3) (-7.5, -7.2)\n",
-      "(-3.0, 8.5) (-3.0, 9.6)\n",
-      "(-3.0, 9.6) (-3.0, 8.5)\n",
-      "(-2.3, 7.1) (-3.0, 8.5)\n",
-      "(-0.9, 9.8) (-3.0, 9.6)\n",
-      "(2.9, 1.4) (3.7, 0.6)\n",
-      "(3.6, 2.3) (2.9, 1.4)\n",
-      "(3.7, 0.6) (2.9, 1.4)\n",
-      "(6.1, 1.7) (3.6, 2.3)\n"
-     ]
-    }
-   ],
-   "source": [
-    "for component in connected_components:\n",
-    "    for node in component:\n",
-    "        print(node, neighbours[node][0][1])\n",
-    "        G.add_edge(node, neighbours[node][2][1])"
    ]
   }
  ],
