--- a/m.ipynb
+++ b/m.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 166,
+   "execution_count": 182,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -23,7 +23,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 167,
+   "execution_count": 183,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -34,7 +34,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 168,
+   "execution_count": 184,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -59,7 +59,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 169,
+   "execution_count": 185,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -69,7 +69,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 170,
+   "execution_count": 186,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -92,7 +92,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 171,
+   "execution_count": 187,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -105,7 +105,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 172,
+   "execution_count": 188,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -139,7 +139,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 173,
+   "execution_count": 189,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -179,7 +179,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 174,
+   "execution_count": 190,
    "metadata": {},
    "outputs": [
     {
@@ -218,7 +218,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 175,
+   "execution_count": 191,
    "metadata": {},
    "outputs": [
     {
@@ -235,7 +235,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 176,
+   "execution_count": 192,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -253,20 +253,31 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 177,
+   "execution_count": 193,
    "metadata": {},
    "outputs": [],
    "source": [
     "Gst = nx.minimum_spanning_tree(Gst, algorithm=\"prim\", weight=\"weight\")\n",
-    "gst_weight = round(sum(data[\"weight\"] for u, v, data in Gst.edges(data=True)), 2)\n"
+    "gst_weight = sum(data[\"weight\"] for u, v, data in Gst.edges(data=True))\n"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 194,
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Weight Error: 8.48%\n"
+     ]
+    }
+   ],
+   "source": [
+    "wt_error = round(abs(mst_weight - gst_weight) / gst_weight * 100, 2)\n",
+    "print(f\"Weight Error: {wt_error}%\")"
+   ]
   },
   {
    "cell_type": "code",
