--- a/m.ipynb
+++ b/m.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 182,
+   "execution_count": 35,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -23,18 +23,19 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 183,
+   "execution_count": 36,
    "metadata": {},
    "outputs": [],
    "source": [
     "savefile = \"data.json\"\n",
-    "points_count = 100\n",
-    "to_plot = False"
+    "points_count = 10000\n",
+    "to_plot = False\n",
+    "no_centres = 1"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 184,
+   "execution_count": 37,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -59,17 +60,26 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 185,
+   "execution_count": 38,
    "metadata": {},
    "outputs": [],
    "source": [
-    "X, Y = make_blobs(n_samples=points_count, centers=4, random_state=42)\n",
+    "X, Y = make_blobs(n_samples=points_count, centers=no_centres, random_state=42)\n",
     "points = [(x, y) for x, y in X]"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 186,
+   "execution_count": 39,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "dcran_start_time = time.time()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 40,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -92,7 +102,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 187,
+   "execution_count": 41,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -105,7 +115,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 188,
+   "execution_count": 42,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -139,7 +149,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 189,
+   "execution_count": 43,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -170,7 +180,7 @@
     "    edgecount = G.number_of_edges()\n",
     "    mst = nx.minimum_spanning_tree(G)    \n",
     "    print(mst.number_of_nodes() , mst.number_of_edges())\n",
-    "    mst_weight = round(sum(data[\"weight\"] for u, v, data in mst.edges(data=True)) , 2)\n",
+    "    mst_weight = sum(data[\"weight\"] for u, v, data in mst.edges(data=True)) \n",
     "    print(\n",
     "        f\"Minimum Spanning Tree: {mst.number_of_nodes()} nodes, {mst.number_of_edges()} edges, Total Weight: {mst_weight}\"\n",
     "    )\n",
@@ -179,36 +189,49 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 190,
+   "execution_count": 44,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "100 0\n",
-      "Connected Components :  100\n",
-      "The graph has 100 nodes and 0 edges.\n",
-      "Connected Components :  25\n",
-      "The graph has 100 nodes and 75 edges.\n",
-      "Connected Components :  4\n",
-      "The graph has 100 nodes and 103 edges.\n",
-      "Connected Components :  4\n",
-      "The graph has 100 nodes and 103 edges.\n",
-      "Connected Components :  4\n",
-      "The graph has 100 nodes and 103 edges.\n",
-      "Connected Components :  4\n",
-      "The graph has 100 nodes and 103 edges.\n",
-      "Connected Components :  4\n",
-      "The graph has 100 nodes and 103 edges.\n",
+      "10000 0\n",
+      "Connected Components :  10000\n",
+      "The graph has 10000 nodes and 0 edges.\n",
+      "Connected Components :  3077\n",
+      "The graph has 10000 nodes and 6923 edges.\n",
+      "Connected Components :  465\n",
+      "The graph has 10000 nodes and 10753 edges.\n",
+      "Connected Components :  22\n",
+      "The graph has 10000 nodes and 11976 edges.\n",
+      "Connected Components :  3\n",
+      "The graph has 10000 nodes and 12048 edges.\n",
+      "Connected Components :  3\n",
+      "The graph has 10000 nodes and 12048 edges.\n",
+      "Connected Components :  3\n",
+      "The graph has 10000 nodes and 12048 edges.\n",
+      "Connected Components :  3\n",
+      "The graph has 10000 nodes and 12048 edges.\n",
+      "Connected Components :  3\n",
+      "The graph has 10000 nodes and 12048 edges.\n",
+      "Connected Components :  3\n",
+      "The graph has 10000 nodes and 12048 edges.\n",
+      "Connected Components :  3\n",
+      "The graph has 10000 nodes and 12048 edges.\n",
+      "Connected Components :  3\n",
+      "The graph has 10000 nodes and 12048 edges.\n",
+      "Connected Components :  3\n",
+      "The graph has 10000 nodes and 12048 edges.\n",
+      "Connected Components :  3\n",
+      "The graph has 10000 nodes and 12048 edges.\n",
       "merge phase\n",
-      "merging (-7.0719881559323925, -6.578562250942334) and (4.4202069483905895, 2.3302822554524782) with pivot (-6.292770097351, -4.6896539674659685) and (3.533543862222073, 0.7769630598600612)\n",
-      "merging (4.4202069483905895, 2.3302822554524782) and (-8.915429466050114, 7.664674890315347) with pivot (2.020133732138357, 2.795072188315956) and (-6.9725532454912535, 7.797355836410491)\n",
-      "merging (-8.915429466050114, 7.664674890315347) and (-2.6248459054409907, 8.713182432609033) with pivot (-6.9725532454912535, 7.797355836410491) and (-4.234115455565783, 8.45199859895735)\n",
-      "The graph has 100 nodes and 106 edges.\n",
+      "merging (-6.86620670576281, -6.893392682234966) and (4.635805999106666, 1.9319100312906716) with pivot (-3.693052279340215, -5.535675685192942) and (2.69831103560788, -0.4117358250098504)\n",
+      "merging (4.635805999106666, 1.9319100312906716) and (-5.750464963121823, 7.989898486864032) with pivot (2.871747803521383, 4.965980254001373) and (-0.19453905637924152, 7.147020935606573)\n",
+      "The graph has 10000 nodes and 12050 edges.\n",
       "Connected Components :  1\n",
-      "100 99\n",
-      "Minimum Spanning Tree: 100 nodes, 99 edges, Total Weight: 75.14\n"
+      "10000 9999\n",
+      "Minimum Spanning Tree: 10000 nodes, 9999 edges, Total Weight: 640.8\n"
      ]
     }
    ],
@@ -218,24 +241,26 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 191,
+   "execution_count": 45,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "yes\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
-    "if (-10.215997124593102, 6.38569787558358) in points : print(\"yes\")"
+    "dcran_end_time = time.time()\n",
+    "dcran_elapsed_time = dcran_end_time - dcran_start_time"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 192,
+   "execution_count": 46,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "prim_start_time = time.time()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 47,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -253,7 +278,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 193,
+   "execution_count": 48,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -263,14 +288,42 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 194,
+   "execution_count": 49,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "prim_end_time = time.time()\n",
+    "prim_elapsed_time = prim_end_time - prim_start_time"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 50,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Weight Error: 8.48%\n"
+      "Speedup: 280.25\n"
+     ]
+    }
+   ],
+   "source": [
+    "speedup = prim_elapsed_time / dcran_elapsed_time\n",
+    "print(f\"Speedup: {speedup:.2f}\")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 51,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Weight Error: 1.37%\n"
      ]
     }
    ],
@@ -284,7 +337,29 @@
    "execution_count": null,
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "with open(savefile, \"r\") as f:\n",
+    "    loaded_data = json.load(f)\n",
+    "print(loaded_data)\n",
+    "currres = []\n",
+    "loaded_data.append(\n",
+    "    [\n",
+    "        points_count,\n",
+    "        no_centres,\n",
+    "        mst_weight,\n",
+    "        gst_weight,\n",
+    "        edgecount,\n",
+    "        wt_error,\n",
+    "        dcran_elapsed_time,\n",
+    "        prim_elapsed_time,\n",
+    "        speedup,\n",
+    "    ]\n",
+    ")\n",
+    "\n",
+    "# Save the updated dictionary back to the JSON file\n",
+    "with open(savefile, \"w\") as f:\n",
+    "    json.dump(loaded_data, f)"
+   ]
   }
  ],
  "metadata": {
