add table pprint

--- a/m.ipynb
+++ b/m.ipynb
@@ -328,7 +328,7 @@
     }
    ],
    "source": [
-    "wt_error = round(abs(mst_weight - gst_weight) / gst_weight * 100, 2)\n",
+    "wt_error = abs(mst_weight - gst_weight) / gst_weight * 100\n",
     "print(f\"Weight Error: {wt_error}%\")"
    ]
   },
@@ -359,6 +359,34 @@
     "# Save the updated dictionary back to the JSON file\n",
     "with open(savefile, \"w\") as f:\n",
     "    json.dump(loaded_data, f)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "headers = [\n",
+    "    \"Points\",\n",
+    "    \"Centres\",\n",
+    "    \"DCRAN Wt\",\n",
+    "    \"prims Wt\",\n",
+    "    \"Edge count\",\n",
+    "    \"Acc(%)\",\n",
+    "    \"DCRAN Time (s)\",\n",
+    "    \"STMST Time (s)\",\n",
+    "    \"Speedup\",\n",
+    "]\n",
+    "\n",
+    "# Format the data as a table using tabulate\n",
+    "table_str = tabulate(\n",
+    "    loaded_data[-15:],\n",
+    "    headers,\n",
+    "    tablefmt=\"pipe\",\n",
+    "    floatfmt=(\".0f\", \".0f\", \".1f\", \".1f\", \".0f\", \".2f\", \".2f\", \".2f\", \".2f\"),\n",
+    ")\n",
+    "print(table_str)"
    ]
   }
  ],
