--- a/m.ipynb
+++ b/m.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 35,
+   "execution_count": 44,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -23,19 +23,19 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 36,
+   "execution_count": 45,
    "metadata": {},
    "outputs": [],
    "source": [
     "savefile = \"data.json\"\n",
-    "points_count = 10000\n",
+    "points_count = 5000\n",
     "to_plot = False\n",
     "no_centres = 1"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 37,
+   "execution_count": 46,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -60,7 +60,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 38,
+   "execution_count": 47,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -70,7 +70,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 39,
+   "execution_count": 48,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -79,7 +79,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 40,
+   "execution_count": 49,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -102,7 +102,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 41,
+   "execution_count": 50,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -115,7 +115,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 42,
+   "execution_count": 51,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -149,7 +149,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 43,
+   "execution_count": 52,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -189,49 +189,26 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 44,
+   "execution_count": 53,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "10000 0\n",
-      "Connected Components :  10000\n",
-      "The graph has 10000 nodes and 0 edges.\n",
-      "Connected Components :  3077\n",
-      "The graph has 10000 nodes and 6923 edges.\n",
-      "Connected Components :  465\n",
-      "The graph has 10000 nodes and 10753 edges.\n",
-      "Connected Components :  22\n",
-      "The graph has 10000 nodes and 11976 edges.\n",
-      "Connected Components :  3\n",
-      "The graph has 10000 nodes and 12048 edges.\n",
-      "Connected Components :  3\n",
-      "The graph has 10000 nodes and 12048 edges.\n",
-      "Connected Components :  3\n",
-      "The graph has 10000 nodes and 12048 edges.\n",
-      "Connected Components :  3\n",
-      "The graph has 10000 nodes and 12048 edges.\n",
-      "Connected Components :  3\n",
-      "The graph has 10000 nodes and 12048 edges.\n",
-      "Connected Components :  3\n",
-      "The graph has 10000 nodes and 12048 edges.\n",
-      "Connected Components :  3\n",
-      "The graph has 10000 nodes and 12048 edges.\n",
-      "Connected Components :  3\n",
-      "The graph has 10000 nodes and 12048 edges.\n",
-      "Connected Components :  3\n",
-      "The graph has 10000 nodes and 12048 edges.\n",
-      "Connected Components :  3\n",
-      "The graph has 10000 nodes and 12048 edges.\n",
-      "merge phase\n",
-      "merging (-6.86620670576281, -6.893392682234966) and (4.635805999106666, 1.9319100312906716) with pivot (-3.693052279340215, -5.535675685192942) and (2.69831103560788, -0.4117358250098504)\n",
-      "merging (4.635805999106666, 1.9319100312906716) and (-5.750464963121823, 7.989898486864032) with pivot (2.871747803521383, 4.965980254001373) and (-0.19453905637924152, 7.147020935606573)\n",
-      "The graph has 10000 nodes and 12050 edges.\n",
+      "5000 0\n",
+      "Connected Components :  5000\n",
+      "The graph has 5000 nodes and 0 edges.\n",
+      "Connected Components :  1541\n",
+      "The graph has 5000 nodes and 3459 edges.\n",
+      "Connected Components :  224\n",
+      "The graph has 5000 nodes and 5401 edges.\n",
+      "Connected Components :  12\n",
+      "The graph has 5000 nodes and 5947 edges.\n",
       "Connected Components :  1\n",
-      "10000 9999\n",
-      "Minimum Spanning Tree: 10000 nodes, 9999 edges, Total Weight: 640.8\n"
+      "The graph has 5000 nodes and 5995 edges.\n",
+      "5000 4999\n",
+      "Minimum Spanning Tree: 5000 nodes, 4999 edges, Total Weight: 224.23808964504997\n"
      ]
     }
    ],
@@ -241,7 +218,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 45,
+   "execution_count": 54,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -251,7 +228,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 46,
+   "execution_count": 55,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -260,35 +237,35 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 47,
+   "execution_count": 56,
    "metadata": {},
    "outputs": [],
    "source": [
-    "Gst = nx.Graph()\n",
+    "# Gst = nx.Graph()\n",
     "\n",
-    "for pointi in points:\n",
-    "    Gst.add_node(pointi, pos=pointi)\n",
+    "# for pointi in points:\n",
+    "#     Gst.add_node(pointi, pos=pointi)\n",
     "    \n",
-    "for pointi in points:    \n",
-    "    for pointj in points:\n",
-    "        if pointi != pointj:\n",
-    "            dis = euclidean_distance(pointi, pointj)\n",
-    "            Gst.add_edge(pointi , pointj , weight=dis)"
+    "# for pointi in points:    \n",
+    "#     for pointj in points:\n",
+    "#         if pointi != pointj:\n",
+    "#             dis = euclidean_distance(pointi, pointj)\n",
+    "#             Gst.add_edge(pointi , pointj , weight=dis)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 48,
+   "execution_count": 57,
    "metadata": {},
    "outputs": [],
    "source": [
-    "Gst = nx.minimum_spanning_tree(Gst, algorithm=\"prim\", weight=\"weight\")\n",
-    "gst_weight = sum(data[\"weight\"] for u, v, data in Gst.edges(data=True))\n"
+    "# Gst = nx.minimum_spanning_tree(Gst, algorithm=\"prim\", weight=\"weight\")\n",
+    "# gst_weight = sum(data[\"weight\"] for u, v, data in Gst.edges(data=True))\n"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 49,
+   "execution_count": 58,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -298,45 +275,122 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 50,
+   "execution_count": 59,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Speedup: 280.25\n"
+      "MST Weight:  221.68865919201852\n",
+      "time taken by dcran :  7.015679836273193\n"
      ]
     }
    ],
    "source": [
-    "speedup = prim_elapsed_time / dcran_elapsed_time\n",
+    "import math\n",
+    "\n",
+    "eprim_start_time = time.time()\n",
+    "def calculate_distance(p1, p2):\n",
+    "    x1, y1 = p1\n",
+    "    x2, y2 = p2\n",
+    "    return math.sqrt((x2 - x1) ** 2 + (y2 - y1) ** 2)\n",
+    "\n",
+    "\n",
+    "def prim_mst(points):\n",
+    "    n = len(points)\n",
+    "    visited = [False] * n\n",
+    "    min_cost = [float(\"inf\")] * n\n",
+    "    parent = [None] * n\n",
+    "\n",
+    "    min_cost[0] = 0\n",
+    "    parent[0] = -1\n",
+    "\n",
+    "    for _ in range(n):\n",
+    "        min_index = -1\n",
+    "        for i in range(n):\n",
+    "            if not visited[i] and (\n",
+    "                min_index == -1 or min_cost[i] < min_cost[min_index]\n",
+    "            ):\n",
+    "                min_index = i\n",
+    "\n",
+    "        visited[min_index] = True\n",
+    "\n",
+    "        for i in range(n):\n",
+    "            if not visited[i]:\n",
+    "                distance = calculate_distance(points[min_index], points[i])\n",
+    "                if distance < min_cost[i]:\n",
+    "                    min_cost[i] = distance\n",
+    "                    parent[i] = min_index\n",
+    "\n",
+    "    mst_edges = []\n",
+    "    for i in range(1, n):\n",
+    "        mst_edges.append((parent[i], i))\n",
+    "\n",
+    "    return mst_edges\n",
+    "\n",
+    "\n",
+    "mst = prim_mst(points)\n",
+    "eprim_end_time = time.time()\n",
+    "eprim_elapsed_time = eprim_end_time - eprim_start_time\n",
+    "print(\"MST Weight: \", eprim_wt := sum([calculate_distance(points[u], points[v]) for u, v in mst]))\n",
+    "print(\"time taken by dcran : \", eprim_elapsed_time)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 60,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Speedup: 10.14\n"
+     ]
+    }
+   ],
+   "source": [
+    "speedup = eprim_elapsed_time / dcran_elapsed_time\n",
     "print(f\"Speedup: {speedup:.2f}\")"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 51,
+   "execution_count": 61,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Weight Error: 1.37%\n"
+      "Weight Error: 1.1500049043208953%\n"
      ]
     }
    ],
    "source": [
-    "wt_error = abs(mst_weight - gst_weight) / gst_weight * 100\n",
+    "wt_error = abs(mst_weight - eprim_wt) / eprim_wt * 100\n",
     "print(f\"Weight Error: {wt_error}%\")"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 62,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "ename": "FileNotFoundError",
+     "evalue": "[Errno 2] No such file or directory: 'data.json'",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[0;31mFileNotFoundError\u001b[0m                         Traceback (most recent call last)",
+      "Cell \u001b[0;32mIn[62], line 1\u001b[0m\n\u001b[0;32m----> 1\u001b[0m \u001b[38;5;28;01mwith\u001b[39;00m \u001b[38;5;28;43mopen\u001b[39;49m\u001b[43m(\u001b[49m\u001b[43msavefile\u001b[49m\u001b[43m,\u001b[49m\u001b[43m \u001b[49m\u001b[38;5;124;43m\"\u001b[39;49m\u001b[38;5;124;43mr\u001b[39;49m\u001b[38;5;124;43m\"\u001b[39;49m\u001b[43m)\u001b[49m \u001b[38;5;28;01mas\u001b[39;00m f:\n\u001b[1;32m      2\u001b[0m     loaded_data \u001b[38;5;241m=\u001b[39m json\u001b[38;5;241m.\u001b[39mload(f)\n\u001b[1;32m      3\u001b[0m \u001b[38;5;28mprint\u001b[39m(loaded_data)\n",
+      "File \u001b[0;32m~/.local/lib/python3.10/site-packages/IPython/core/interactiveshell.py:284\u001b[0m, in \u001b[0;36m_modified_open\u001b[0;34m(file, *args, **kwargs)\u001b[0m\n\u001b[1;32m    277\u001b[0m \u001b[38;5;28;01mif\u001b[39;00m file \u001b[38;5;129;01min\u001b[39;00m {\u001b[38;5;241m0\u001b[39m, \u001b[38;5;241m1\u001b[39m, \u001b[38;5;241m2\u001b[39m}:\n\u001b[1;32m    278\u001b[0m     \u001b[38;5;28;01mraise\u001b[39;00m \u001b[38;5;167;01mValueError\u001b[39;00m(\n\u001b[1;32m    279\u001b[0m         \u001b[38;5;124mf\u001b[39m\u001b[38;5;124m\"\u001b[39m\u001b[38;5;124mIPython won\u001b[39m\u001b[38;5;124m'\u001b[39m\u001b[38;5;124mt let you open fd=\u001b[39m\u001b[38;5;132;01m{\u001b[39;00mfile\u001b[38;5;132;01m}\u001b[39;00m\u001b[38;5;124m by default \u001b[39m\u001b[38;5;124m\"\u001b[39m\n\u001b[1;32m    280\u001b[0m         \u001b[38;5;124m\"\u001b[39m\u001b[38;5;124mas it is likely to crash IPython. If you know what you are doing, \u001b[39m\u001b[38;5;124m\"\u001b[39m\n\u001b[1;32m    281\u001b[0m         \u001b[38;5;124m\"\u001b[39m\u001b[38;5;124myou can use builtins\u001b[39m\u001b[38;5;124m'\u001b[39m\u001b[38;5;124m open.\u001b[39m\u001b[38;5;124m\"\u001b[39m\n\u001b[1;32m    282\u001b[0m     )\n\u001b[0;32m--> 284\u001b[0m \u001b[38;5;28;01mreturn\u001b[39;00m \u001b[43mio_open\u001b[49m\u001b[43m(\u001b[49m\u001b[43mfile\u001b[49m\u001b[43m,\u001b[49m\u001b[43m \u001b[49m\u001b[38;5;241;43m*\u001b[39;49m\u001b[43margs\u001b[49m\u001b[43m,\u001b[49m\u001b[43m \u001b[49m\u001b[38;5;241;43m*\u001b[39;49m\u001b[38;5;241;43m*\u001b[39;49m\u001b[43mkwargs\u001b[49m\u001b[43m)\u001b[49m\n",
+      "\u001b[0;31mFileNotFoundError\u001b[0m: [Errno 2] No such file or directory: 'data.json'"
+     ]
+    }
+   ],
    "source": [
     "with open(savefile, \"r\") as f:\n",
     "    loaded_data = json.load(f)\n",
@@ -347,11 +401,11 @@
     "        points_count,\n",
     "        no_centres,\n",
     "        mst_weight,\n",
-    "        gst_weight,\n",
+    "        eprim_wt,\n",
     "        edgecount,\n",
     "        wt_error,\n",
     "        dcran_elapsed_time,\n",
-    "        prim_elapsed_time,\n",
+    "        eprim_elapsed_time,\n",
     "        speedup,\n",
     "    ]\n",
     ")\n",
@@ -388,6 +442,34 @@
     ")\n",
     "print(table_str)"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
